# pkg/handler/bookingSlots.go
@@ -3,10 +3,22 @@ package handler
 import (
 	"net/http"
 	"github.com/gin-gonic/gin"
-	"github.com/inzarubin80/booking-services"
-)
+	"github.com/inzarubin80/booking-services")
 
 
+// @Summary Booking slots
+// @Security ApiKeyAuth
+// @Tags BookingSlots
+// @Description slot reservation
+// @IDBookingSlots
+// @Accept  json
+// @Produce  json
+// @Param input body booking.BookingSlots true "Booking Slots"
+// @@Success 200 {integer} integer 1
+// @Failure 400,404 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Failure default {object} errorResponse
+// @Router /api/bookingSlots [post]
 func (h *Handler) createBookingSlots(c *gin.Context) {
 
 	var input booking.BookingSlots
